# re-llm_engineering

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml
concepts/chat-completions/: notebook.ipynb  readme.md
concepts/tokens-memory/: notebook.ipynb  readme.md
concepts/tool-calling/: notebook.ipynb  prices.db  readme.md
docs/: local_setup.md
