[project]
name = "re-llm-engineering"
version = "0.3.0"
description = "A collection of study resources and best practices for LLM engineering."
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=5.49.1",
    "ipywidgets>=8.1.8",
    "openai>=2.7.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "tiktoken>=0.12.0",
]
